# TemplateCMakeCPP

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build-and-unit-test.yml  code-analysis.yml  daily-tests.yml  style-conformance.yml
include/: CMakeLists.txt
include/template/: Hello.hpp
src/: CMakeLists.txt  Hello.cpp  main.cpp
tests/: CMakeLists.txt
tests/include/: CMakeLists.txt
tests/include/template/unit_test/: HelloTestFixture.hpp
tests/src/: CMakeLists.txt
tests/src/unit_test/: HelloTest.cpp
